post: 자바 동시성 조언에는 유통기한이 있다 (JDK 21 vs 25 실측)
+ 옛 가상 스레드 글 2편에 정정 안내 추가

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01A2fcrGEYuASWUeRR8pyuZb